--- a/src/Pages/AboutPage/AboutStory/AboutStory.css
+++ b/src/Pages/AboutPage/AboutStory/AboutStory.css
@@ -12,7 +12,7 @@
 ============================== */
 .story-heading {
  
-  color: #42427D;
+  color: #000000;
   font-weight: 700;
   font-size: 2rem;
   line-height: 1.3;
@@ -23,8 +23,9 @@
 ============================== */
 .story-paragraph {
   /* font-family: "Montserrat", sans-serif !important; */
-  font-family: "Poppins", sans-serif !important;
+  font-family: "Merriweather", serif !important;
   font-weight: 500 !important;
+  color: #000 !important;
   /* font-family: "Playfair Display", serif !important;
   font-weight: 600 !important; */
   color: #000;
