--- a/src/Pages/AboutPage/Timeline.css
+++ b/src/Pages/AboutPage/Timeline.css
@@ -96,6 +96,7 @@
   font-family: "Merriweather", serif !important;
   font-weight: 500 !important;
   color: #000 !important;
+  letter-spacing: 1px;
   font-size: 1.14rem;
   margin: 0;
   line-height: 1.6;
