--- a/src/Pages/AboutPage/AboutStory/AboutStory.css
+++ b/src/Pages/AboutPage/AboutStory/AboutStory.css
@@ -25,13 +25,13 @@
   /* font-family: "Montserrat", sans-serif !important; */
   font-family: "Merriweather", serif !important;
   font-weight: 500 !important;
+  letter-spacing: 1px;
   color: #000 !important;
   /* font-family: "Playfair Display", serif !important;
   font-weight: 600 !important; */
-  color: #000;
   max-width: 100%;
-  font-size: 1.5rem;
-  line-height: 1.6;
+  font-size: 1.6rem;
+  line-height: 1.65;
 }
 
 /* ==============================
