About us font style and colors updated

--- a/src/Pages/AboutPage/Timeline.css
+++ b/src/Pages/AboutPage/Timeline.css
@@ -70,6 +70,9 @@
   width: 95%;
   margin-left: 0.5rem;
 }
+.timeline-row.reverse{
+  align-items: flex-start !important;
+}
 
 .timeline-row.reverse .timeline-carousel {
   margin-left: 2rem;
