About us font style and colors updated

--- a/src/Components/CareerSection/CareerSection.css
+++ b/src/Components/CareerSection/CareerSection.css
@@ -75,7 +75,7 @@
 }
 .car-explore-btn{
         background-color: #ffffff00;
-    color: black;
+    color: black !important;
     border: 1px solid black;
 }
 .green-explore-btn{
