corriculam tab content added

--- a/src/Components/Navbar/Navbar.css
+++ b/src/Components/Navbar/Navbar.css
@@ -183,6 +183,7 @@
 .top-head a, button {
   text-decoration: none;
   font-weight: 500;
+   color: #fff;
   text-transform: uppercase;
 
   letter-spacing: 0.6px;
