--- a/src/Components/Platforms/Platforms.css
+++ b/src/Components/Platforms/Platforms.css
@@ -1,13 +1,13 @@
 .platforms-container {
   margin-top: 4%;
 }
-.apply-btn{
+.apply-btns{
   transform: scale(1.05);
     background-color: #74C61B;
     color: white;
     border-radius: 3px;
 }
-.apply-btn:hover{
+.apply-btns:hover{
   background-color: #5aa10f;
   color: white;
 }
