--- a/src/Pages/PgprogramPage/pgTabs/PlacementTab/PlacementTab.css
+++ b/src/Pages/PgprogramPage/pgTabs/PlacementTab/PlacementTab.css
@@ -112,7 +112,7 @@
   background: transparent;  /* no background wrapper */
 
 }
-.swiper{
+.swiper-place-tab{
   padding: 3% 0;
 }
 .contact-place-con{
