--- a/src/Pages/PgprogramPage/pgTabs/PlacementTab/PlacementTab.css
+++ b/src/Pages/PgprogramPage/pgTabs/PlacementTab/PlacementTab.css
@@ -16,7 +16,7 @@
     border: 1px solid black;
     border-radius: 5px;
 }
-.active {
+.placement-btns-intern.active {
   background: #5ac501;
   color: white;
   border: none;
