--- a/src/Pages/PgprogramPage/pgTabs/OverviewTab/OverviewKeyhighlights.css
+++ b/src/Pages/PgprogramPage/pgTabs/OverviewTab/OverviewKeyhighlights.css
@@ -109,3 +109,46 @@
     margin-top: 1rem;
   }
 }
+@media (max-width: 768px) {
+  .video-con-objectives{
+  left: 0 !important;
+  z-index: 2;
+  width: 100% !important;
+}
+.mob-nav-pill{
+  margin-bottom: -25px;
+}
+}
+
+.video-con-objectives{
+  left: 20%;
+  z-index: 2;
+}
+
+.mobile-content {
+  overflow: hidden;
+  max-height: 0;
+  opacity: 0;
+  transform: translateY(-10px);
+  transition: all 1s ease;
+}
+
+.mobile-content.show {
+  max-height: 500px; /* enough for content height */
+  opacity: 1;
+  transform: translateY(0);
+  margin-top: 40px !important;
+}
+
+.transition {
+  transition: transform 0.3s ease;
+}
+
+.rotate-180 {
+  transform: rotate(180deg);
+}
+.left-nav .nav-pill.show {
+  background: #005bd4; /* dark purple */
+  color: #fff;
+  box-shadow: 0 4px 10px rgba(75,26,102,0.08);
+}
