--- a/src/Components/Navbar/Navbar.css
+++ b/src/Components/Navbar/Navbar.css
@@ -799,14 +799,14 @@ li:hover .career-reboot-heading {
 }
 
 .search-icon-nab-bg{
-  background-color: #0c0142;
+  background-color: #005bd4;
   color: white;
   border-radius: 50%;
   padding:7px 8px;
   cursor: pointer;
 }
 .profile-icon-nab-bg{
-  background-color: #0c0142;
+  background-color: #005bd4;
   color: white;
   border-radius: 50%;
   padding:8px;
@@ -833,12 +833,12 @@ li:hover .career-reboot-heading {
   position: absolute;
   right: 5%;
   top: 42%;
-  color: #0c0142;
+  color: #005bd4;
 }
 
 .online-program-link {
   font-weight: 600;
-  background-color: #0c0142;
+  background-color: #005bd4;
   color: white !important;
   position: relative;
   padding: 0.8rem 2rem;
