--- a/src/Components/Navbar/Navbar.css
+++ b/src/Components/Navbar/Navbar.css
@@ -97,13 +97,16 @@
   left: 110% !important;
 }
 .dropdown-menu.programs{
-  left: 310% !important;
+  left: 200% !important;
+}
+.dropdown-menu.industry-partnership{
+  left: 150% !important;
 }
 .dropdown-menu.online-programs{
   left: -60% !important;
 }
 .dropdown-menu.programs{
-    width: 60vw !important;
+    width: 40vw !important;
   transform: translateX(-65%) translateY(0) !important;
 }
 .dropdown-menu.executive-education{
