--- a/src/Pages/PgprogramPage/PgApplications.css
+++ b/src/Pages/PgprogramPage/PgApplications.css
@@ -65,6 +65,20 @@
 .apply-btn:hover {
   background: #e58010;
 }
+.apply-btn-mob {
+  background: #f6921e;
+  color: #fff;
+  border: none;
+  font-size: 10px;
+  border-radius: 4px;
+  padding: 0.3rem .8rem;
+  width: 100%;
+  cursor: pointer;
+  transition: background 0.3s;
+}
+.apply-btn-mob:hover {
+  background: #e58010;
+}
 
 /* Responsive layout */
 @media (max-width: 992px) {
