--- a/src/Pages/PgprogramPage/pgTabs/OverviewTab/OverviewKeyhighlights.css
+++ b/src/Pages/PgprogramPage/pgTabs/OverviewTab/OverviewKeyhighlights.css
@@ -47,7 +47,7 @@
 .content-card {
   background: #fff;
   border-radius: 4px;
-  min-height: 335px;
+  min-height: 245px;
   box-shadow: 0 2px 8px rgba(0,0,0,0.05);
   border: 1px solid rgba(0,0,0,0.03);
   display: flex;
@@ -118,6 +118,28 @@
 .mob-nav-pill{
   margin-bottom: -25px;
 }
+.video-modal-i-frame{
+  width:600px !important;
+  height: 450px !important;
+}
+}
+@media (max-width: 480px){
+.video-modal-i-frame{
+  width:350px !important;
+  height: 250px !important;
+}
+}
+@media (max-width: 380px){
+.video-modal-i-frame{
+  width:320px !important;
+  height: 250px !important;
+}
+}
+@media (max-width: 320px){
+.video-modal-i-frame{
+  width:280px !important;
+  height: 250px !important;
+}
 }
 
 .video-con-objectives{
@@ -151,4 +173,78 @@
   background: #005bd4; /* dark purple */
   color: #fff;
   box-shadow: 0 4px 10px rgba(75,26,102,0.08);
+}
+
+.i-frame-participant{
+  height: 60vh;
+  width: 100%;
+}
+
+.video-modal {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(0,0,0,0.7);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  z-index: 1000;
+}
+
+.video-modal-content {
+  position: relative;
+  background: #000;
+  padding: 10px;
+  border-radius: 8px;
+}
+
+.close-button-participant {
+  position: absolute;
+  top: -30px;
+  right: -10px;
+  cursor: pointer;
+  font-weight: bold;
+  background-color: transparent;
+  border: none;
+}
+
+/* OverviewParticipant.css or your CSS file */
+.participant-sec-swiper {
+  position: relative;
+  padding-bottom: 5%;
+}
+
+.participant-sec-swiper .swiper-pagination {
+  bottom: 0 !important; /* distance from bottom */
+  position: absolute;
+  text-align: center;
+  z-index: 9999;
+}
+
+.swiper-pagination-bullet {
+  background: #5ac501;  /* green dots */
+  opacity: 1;
+}
+
+.swiper-pagination-bullet-active {
+  background: #000; /* active dot color */
+}
+.participant-play-thumbnail{
+  position: relative;
+}
+.participant-play-icon{
+  position: absolute;
+  bottom: 20%;
+  left: 10%;
+  background-color: #5ac501;
+  color: white;
+  border-radius: 50%;
+  padding: 10px;
+}
+
+.video-modal-i-frame{
+  width:1000px;
+  height: 550px;
 }
