updated overview tab

--- a/src/Pages/PgprogramPage/pgTabs/OverviewTab/OverviewKeyhighlights.css
+++ b/src/Pages/PgprogramPage/pgTabs/OverviewTab/OverviewKeyhighlights.css
@@ -233,6 +233,10 @@
 }
 .participant-play-thumbnail{
   position: relative;
+  width: 100%;
+  height: 70vh;
+  object-fit: cover;
+  border-radius: 10px;
 }
 .participant-play-icon{
   position: absolute;
