--- a/src/Pages/PgprogramPage/pgTabs/Curriculum/Curriculum.css
+++ b/src/Pages/PgprogramPage/pgTabs/Curriculum/Curriculum.css
@@ -149,3 +149,49 @@ img.img-fluid {
     margin-top: 16px;
   }
 }
+
+
+.curriculum-table {
+  width: 100%;
+  border-collapse: collapse;
+  text-align: left;
+}
+
+.curriculum-table th {
+  border: 1px solid #000; /* Only header has border */
+  padding: 10px;
+  background-color: #f3f3f3;
+}
+
+.curriculum-table td {
+  vertical-align: top;
+  padding: 10px;
+}
+
+.curriculum-table td ul {
+  list-style: none;
+  margin: 0;
+  padding: 0;
+}
+
+.curriculum-table td li {
+  margin-bottom: 4px;
+}
+.green-point-box{
+  height: 10px;
+  width: 10px;
+  background-color: #5ac501;
+}
+.Summer-Internship-head{
+  width: 100%;
+  height: 50px;
+  border-radius: 5px;
+  text-align: center;
+  background: linear-gradient(205deg, rgb(7, 186, 243)  1% , rgb(23, 3, 169) 100%) !important;
+  color: white !important;
+  font-weight: 600;
+  margin: auto;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
