--- a/src/Components/Navbar/Navbar.css
+++ b/src/Components/Navbar/Navbar.css
@@ -392,7 +392,7 @@
   display: none !important;
 }
 
-@media (max-width: 991px) {
+@media (max-width: 1349px) {
   .mobile-toggle {
     display: inline-flex;
     align-items: center;
@@ -447,9 +447,15 @@
   ); */
   padding:0;
   height: 125px;
-  width:400px;
+  width:100%;
 }
-
+.navbar{
+  padding: 0 !important;
+}
+.close-btn{
+  color: #000 !important;
+  padding: 0 2rem !important;
+}
 /* .logo-box::after {
   content: "";
   position: absolute;
@@ -474,7 +480,7 @@
 .navbar-brand.mobile-only {
   display: none;
 }
-@media (max-width: 991px) {
+@media (max-width: 1349px) {
   .navbar-brand.mobile-only {
     display: block;
     display: block;
@@ -488,8 +494,8 @@
   }
   .logo-box {
     display: none;
-    width: auto;
-    height: auto;
+    width: 100%;
+    height: 100%;
   }
   .logo-img {
     height: 100%;
@@ -943,4 +949,13 @@ color: white !important;
   background-color: transparent !important;
 }
 
-
+@media only screen and (min-width: 992px) and (max-width: 1499px) {
+  .navbar-nav .nav-link {
+    font-size: 12px !important;
+            padding-left: 5px !important;
+  }
+  .online-program-link{
+    padding: 0.6rem 1rem !important;
+    font-size: 0.75rem !important;
+  }
+} 
