--- a/src/Pages/AboutPage/ConnectWithUs.css
+++ b/src/Pages/AboutPage/ConnectWithUs.css
@@ -19,7 +19,7 @@
   left: 0;
   width: 100%;
   height: 100%;
-  background: linear-gradient(135deg, rgba(0, 29, 63, 0.9) 0%, rgba(8, 98, 194, 0.85) 100%);
+    background: rgba(0, 0, 0, 0.7); 
   z-index: 0;
 }
 
@@ -52,17 +52,18 @@
 }
 
 .connect-btn {
-  background-color: #ffcc00;
+  background: rgb(90, 197, 1);
   border: none;
-  color: #002b5c;
-  font-weight: 600;
+  color: white;
   padding: 12px 32px;
-  border-radius: 50px;
+  border-radius: 5px;
   transition: all 0.3s ease;
+  font-size: 1rem;
 }
 
 .connect-btn:hover {
-  background-color: #ffc107;
-  color: #001f40;
+  background-color:transparent;
+  color: white;
+  border: 1px solid white;
   transform: translateY(-2px);
 }
