--- a/src/Pages/CampusPage/CampusPage.css
+++ b/src/Pages/CampusPage/CampusPage.css
@@ -179,7 +179,41 @@
 .campus-community-km-btn{
     background-color: transparent !important;
 }
+.campus-steps-data-image{
+  height: 25px;
+  width: 25px;
+}
 
+.campus-location-container {
+  text-align: center;
+  padding: 3rem 1rem;
+}
+
+.campus-location-title {
+  font-size: 2rem;
+  font-weight: 700;
+  margin-bottom: 2rem;
+  color: #222;
+}
+
+.campus-map-wrapper {
+  position: relative;
+  overflow: hidden;
+  border-radius: 12px;
+  width: 100%;
+  height: 50vh;
+  margin: 0 auto;
+  box-shadow: 0 4px 12px rgba(0, 0, 0, 0.2);
+}
+
+.campus-map-wrapper iframe {
+  width: 100%;
+  height: 100%;
+  border: none;
+}
+.campus-address-location{
+  width: 60%;
+}
 
 @media (max-width: 1024px)  {
     .campus-route-bg{
