--- a/src/Pages/CampusPage/CampusPage.css
+++ b/src/Pages/CampusPage/CampusPage.css
@@ -303,5 +303,8 @@ height: 30vh;
 .campus-faculity-bottom-text{
     bottom: -6%;
 }
-
+.campus-community-grid-data{
+  padding-top: 20px;
+  height: auto;
+}
 }
